welcome.lessons.welcome.array.island.Island.scala.error
island:5: error: not found: value compteur
		compteur=compteur + seqInArray(num,i)
                ^island:4: error: type mismatch;
 found   : Unit
 required: Int
	for (i<- M to 0) {
              ^